# llms-eval-demo

./: .env.example  .gitignore  README.md  cmd.txt  pyproject.toml
src/agentic/agents/: agent_factory.py  run_agent.py
src/agentic/data/: default_character_evaluation.csv  mage_character_evaluation.csv
src/agentic/evaluations/: run_evaluation_llm.py  run_evaluation_non_llm.py
src/agentic/evaluators/: add_dataset.py  evaluators.py
src/agentic/prompts/: default_character.py  judge_conciseness_prompt.py  judge_roleplay_prompt.py  mage_character.py
